src/test/deca/context/invalid/binary_op_bool/inequality_int_bool.deca
// Description:
//    Egalité entre int et bool
//
// Resultats:
//    Mauvais opérateurs pour l'égalité
// 
// Historique:
//    cree le 01/01/2016

{
    int a = 5;
    boolean d = true;

    if(a != d) {};
}
